# BluePillKeyboard

./: .gdbinit  .gitignore  Cargo.toml  debug-release.sh  debug.sh  openocd.sh
.cargo/: config
src/: main.rs
src/usb/: mod.rs
